--- a/src/html/sections/_main.html
+++ b/src/html/sections/_main.html
@@ -2,6 +2,6 @@
 	<div class="blur-overlay"></div>
 	<div class="main__fon-text text-secondary position-absolute">Макетная мастерска</div>
 	<div class="container">
-		
+		<h1 class="fs-32">Изготовление архитектурных и промышленных макетов<br>Доставка по России и СНГ</h1>
 	</div>
 </section>
