--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,7 @@
 			
 				@@include('sections/_main.html',{})
 				@@include('sections/_portfolio.html',{})
+				@@include('sections/_sample.html',{})
 
 		
 		</main>
