--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,9 @@
 				@@include('sections/_main.html',{})
 				@@include('sections/_portfolio.html',{})
 				@@include('sections/_sample.html',{})
+				@@include('sections/_why-work.html',{})
+				@@include('sections/_instruments.html',{})
+				@@include('sections/_advantages.html',{})
 
 		
 		</main>
