--- a/src/html/sections/_advantages.html
+++ b/src/html/sections/_advantages.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="advantages__content d-flex gap-5">
 			<div class="advantages__box-img">
-				<img src="@img/" alt="" class="">
+				<img src="@img/advantages/advantage.png" alt="" class="">
 			</div>
 			<div class="advantages__box-text">
 				<h2 class="fs-36 mb-5">Ещё 3 очевидных преимущества</h2>
